syntax = "proto3";

package pb;

import "components/kube/kube.proto";

option go_package = "github.com/justinsb/kweb/components/users/pb";
option (kube.group_version) = {
  group : "kweb.dev",
  version : "v1alpha1"
};

message User {
  option (kube.kind) = {
    kind : "User"
  };

  kube.TypeMeta typemeta = 1;
  kube.ObjectMeta metadata = 2;

  UserSpec spec = 3;
}

message UserSpec {
  string email = 1;
  repeated LinkedAccount linked_accounts = 2;
}

message LinkedAccount {
  // The capitilization isn't normal proto, but it avoids name mangling
  string providerID = 2;
  string providerUserID = 3;
  string providerUserName = 4;
}
